--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -6,6 +6,20 @@
   object-fit: cover;
 }
 
+.btnlink{
+  border: 2px solid gray;
+  border-radius: 25px;
+  scale: 0.8;
+  background: transparent;
+
+  &:hover{
+    box-shadow: 2px 2px 10px white;
+    text-shadow: 2px 2px 10px white;
+    scale: 0.9;
+    rotate: 3deg;
+  }
+}
+
 .about {
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -15,5 +29,13 @@
     rgba(0, 0, 0, 1) 100%
   );
   text-align: justify;
-  padding: 40px;
+  
+}
+
+
+.skills{
+  height: 100vh;
+  background-color: gray;
+//   background: rgb(112,112,112);
+// background: linear-gradient(158deg, rgba(112,112,112,1) 0%, rgba(255,255,255,1) 46%, rgba(255,255,255,1) 46%, rgba(113,113,113,1) 100%);
 }
