--- a/src/Components/Slideshow/Slideshow.scss
+++ b/src/Components/Slideshow/Slideshow.scss
@@ -1,11 +1,12 @@
 .description::-webkit-scrollbar {
   width: 3px;
 }
-.card{
+.card {
+  background-color: rgb(157, 157, 157);
   display: grid;
-  grid-template-columns: repeat(1,1fr);
+  grid-template-columns: repeat(1, 1fr);
 }
-.card:nth-child(2n){
+.card:nth-child(2n) {
   display: flex;
   flex-direction: column-reverse;
 }
