--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.skillsbtn{
+    @apply cursor-pointer hover:text-white hover:bg-black  pl-4 pr-4 pt-2 pb-2 border-2 rounded-3xl ;
+}
